// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> it renders Notification with close collapse 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_info mfui-notification_colored"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="zero"
>
  <div
    className="mfui-notification__container"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content"
    >
      <div
        className="mfui-notification__text-container"
      >
        <p
          className="mfui-notification__text"
        >
          Короткий текст
          <Collapse
            className="mfui-notification__collapse mfui-notification__collapse_hidden"
            classNameContainer="mfui-notification__collapse-inner"
            isOpened={false}
          >
            Длинный текст
          </Collapse>
        </p>
      </div>
      <div
        className="mfui-notification__bottom"
      >
        <button
          className="mfui-notification__collapse-button"
          onClick={[Function]}
          type="button"
        >
          Подробнее
          <div
            className="mfui-notification__collapse-arrow"
          >
            <test-file-stub />
          </div>
        </button>
      </div>
    </div>
  </div>
</Tile>
`;

exports[`<Notification /> it renders Notification with custom close collapse title 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_info mfui-notification_colored"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="zero"
>
  <div
    className="mfui-notification__container"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content"
    >
      <div
        className="mfui-notification__text-container"
      >
        <p
          className="mfui-notification__text"
        >
          Короткий текст
          <Collapse
            className="mfui-notification__collapse mfui-notification__collapse_hidden"
            classNameContainer="mfui-notification__collapse-inner"
            isOpened={false}
          >
            Длинный текст
          </Collapse>
        </p>
      </div>
      <div
        className="mfui-notification__bottom"
      >
        <button
          className="mfui-notification__collapse-button"
          onClick={[Function]}
          type="button"
        >
          Показать весь текст
          <div
            className="mfui-notification__collapse-arrow"
          >
            <test-file-stub />
          </div>
        </button>
      </div>
    </div>
  </div>
</Tile>
`;

exports[`<Notification /> it renders Notification with custom open collapse title 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_info mfui-notification_colored"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="zero"
>
  <div
    className="mfui-notification__container"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content"
    >
      <div
        className="mfui-notification__text-container"
      >
        <p
          className="mfui-notification__text"
        >
          <Collapse
            className="mfui-notification__collapse"
            classNameContainer="mfui-notification__collapse-inner"
            isOpened={true}
          >
            Длинный текст
          </Collapse>
        </p>
      </div>
      <div
        className="mfui-notification__bottom"
      >
        <button
          className="mfui-notification__collapse-button"
          onClick={[Function]}
          type="button"
        >
          Скрыть часть текста
          <div
            className="mfui-notification__collapse-arrow mfui-notification__collapse-arrow_close"
          >
            <test-file-stub />
          </div>
        </button>
      </div>
    </div>
  </div>
</Tile>
`;

exports[`<Notification /> it renders Notification with open collapse 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_info mfui-notification_colored"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="zero"
>
  <div
    className="mfui-notification__container"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content"
    >
      <div
        className="mfui-notification__text-container"
      >
        <p
          className="mfui-notification__text"
        >
          <Collapse
            className="mfui-notification__collapse"
            classNameContainer="mfui-notification__collapse-inner"
            isOpened={true}
          >
            Длинный текст
          </Collapse>
        </p>
      </div>
      <div
        className="mfui-notification__bottom"
      >
        <button
          className="mfui-notification__collapse-button"
          onClick={[Function]}
          type="button"
        >
          Свернуть
          <div
            className="mfui-notification__collapse-arrow mfui-notification__collapse-arrow_close"
          >
            <test-file-stub />
          </div>
        </button>
      </div>
    </div>
  </div>
</Tile>
`;

exports[`<Notification /> it renders colored Notification with Props 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_error mfui-notification_colored notification rootClass"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="hover"
>
  <div
    className="mfui-notification__container containerClass"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content contentClass"
    >
      <div
        className="mfui-notification__text-container"
      >
        <Header
          as="h5"
          className="mfui-notification__title"
          dataAttrs={
            Object {
              "root": undefined,
            }
          }
        >
          title
        </Header>
        <p
          className="mfui-notification__text"
        >
          Some test text
        </p>
      </div>
      <div
        className="mfui-notification__bottom mfui-notification__bottom_has-button"
      >
        <div
          className="mfui-notification__bottom-block"
        >
          <Button
            className="mfui-notification__button"
            dataAttrs={
              Object {
                "root": undefined,
              }
            }
            disabled={false}
            ellipsis={true}
            showLoader={false}
            sizeAll="small"
            sizeMobile="extra-small"
            theme="white"
          >
            Кнопка
          </Button>
        </div>
      </div>
    </div>
  </div>
</Tile>
`;

exports[`<Notification /> renders component 1`] = `
<Tile
  className="mfui-notification mfui-notification_type_info mfui-notification_colored"
  dataAttrs={
    Object {
      "root": undefined,
    }
  }
  radius="rounded"
  shadowLevel="zero"
>
  <div
    className="mfui-notification__container"
  >
    <div
      className="mfui-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-notification__content"
    >
      <div
        className="mfui-notification__text-container"
      >
        <p
          className="mfui-notification__text"
        >
          Some test text
        </p>
      </div>
    </div>
  </div>
</Tile>
`;
